Edited wiki page SVNPassword through web user interface.

--- a/wiki/SVNPassword.wiki
+++ b/wiki/SVNPassword.wiki
@@ -3,3 +3,5 @@
 You might come across some issues committing your data back into the repo, and before anyone else has any problems you might want to read this.
 
 Spoilers: Don't use your gmail password. You have a googlecode password assigned to you.  To get this click the 'Profile' in the upper right corner, then settings, and it is right there staring you in the face.
+
+<img src="https://picasaweb.google.com/lh/photo/pNLBJkGBUNLpNzQb6rjCooKngpaP8U-D229Z7brOys8?feat=directlink" alt="A picture showing you how to find the googlecode password." height="959" width="725"/>
