--- a/wiki/SVNPassword.wiki
+++ b/wiki/SVNPassword.wiki
@@ -4,4 +4,4 @@ You might come across some issues committing your data back into the repo, and b
 
 Spoilers: Don't use your gmail password. You have a googlecode password assigned to you.  To get this click the 'Profile' in the upper right corner, then settings, and it is right there staring you in the face.
 
-<img src="https://picasaweb.google.com/lh/photo/pNLBJkGBUNLpNzQb6rjCooKngpaP8U-D229Z7brOys8?feat=directlink" alt="A picture showing you how to find the googlecode password." height="959" width="725"/>
+<img src="https://lh6.googleusercontent.com/_OYJ8fj3PJrU/TUjsF4GOgPI/AAAAAAAAAA4/yIhD7ujIpjk/s800/screenshot.png" alt="A picture showing you how to find the googlecode password."/>
