--- a/wiki/VirtualBoxInstallation.wiki
+++ b/wiki/VirtualBoxInstallation.wiki
@@ -16,17 +16,17 @@ Once you have these downloaded you are ready to begin. Please note that I assume
 = Details =
 
   # Install Oracle VirtualBox. This should be a relatively straightforward installation. Just double click the installer you downloaded from Oracle's website and follow the directions.
-  # Run VirtualBox. 
-  # Click the *New* Icon on the left side of the window. A _Create New Virtual Machine_ window should open up.
+  # Run VirtualBox. https://lh5.googleusercontent.com/_OYJ8fj3PJrU/TU59FJc-WXI/AAAAAAAAABg/CVL30SNqW-E/s400/VirtualBox%20Startup.png
+  # Click the *New* Icon on the left side of the window. A _Create New Virtual Machine_ window should open up. <img src="https://lh5.googleusercontent.com/_OYJ8fj3PJrU/TU59Eny4EhI/AAAAAAAAABQ/gf8mnuqi7M0/s400/Create%20Ubuntu%20VM.png" alt="Create New Virtual Machine Window" title="Create New Virtual Machine Window"/>
   # Click the *Next* button.
   # Give your virtual machine a name. Something like "Ubuntu" or "My Super Crazy Awesome Robotics Team Virtual Machine" should be fine. Make sure that the OS Type is set to Ubuntu Linux. Click the *Next* button.
   # Set the amount of RAM your virtual machine will use when running. The base setting of 512 MB should be OK, but you can increase it if you wish. I would recommend that this be set to 1024 MB, depending on your computer's total RAM size. Regardless of your choice, you can always change this later if you find that your virtual machine runs too slowly. Click the *Next* button.
-  # You will need to reserve disk space for the virtual machine hard disk. Make sure that _Boot Hard Disk_ is checked and the _Create new hard disk_ option is selected. Click the *Next* button. A _Create New Virtual Disk_ window should open up.
+  # You will need to reserve disk space for the virtual machine hard disk. Make sure that _Boot Hard Disk_ is checked and the _Create new hard disk_ option is selected. Click the *Next* button. A _Create New Virtual Disk_ window should open up. <img src="https://lh4.googleusercontent.com/_OYJ8fj3PJrU/TU59FP-xnwI/AAAAAAAAABc/MShsgqVvjRQ/s400/VirtualBox%20Hard%20Disk.png" alt="Create New Virtual Machine" title="Create New Virtual Machine"/>
   # Click the *Next* button.
   # Select _Dynamically expanding storage_ for the Storage Type. Click the *Next* button.
   # Select a location on your hard drive to store the virtual hard disk file (the standard location should be fine). Select the size of the virtual disk (8 GB is the standard option. I would recommend increasing this slightly based upon how much disk space you have on your real hard disk). Click the *Next* button.
   # Review your choices and click the *Next* button to create the new virtual disk.
-  # Click the *Finish* button. Congratulations, you should now have a virtual machine listed on the left hand side of the VirtualBox window.
-  # Double click the newly created virtual machine. A _First Run Wizard_ window should pop up. Before continuing, you must either insert a DVD containing the Ubuntu image or mount the image using DAEMON Tools Lite. Install DAEMON Tools by double clicking its installer if you want to go this route. Then ensure that DAEMON Tools is running by selecting it from the Start menu. You should see a lightning bolt symbol in the bottom right corner of the task bar. Right click this icon, select Virtual Devices, then Device 0, then Mount Image. Navigate to the .iso Ubuntu image that you downloaded and select it. You should now have Ubuntu mounted and ready to go.
+  # Click the *Finish* button. Congratulations, you should now have a virtual machine listed on the left hand side of the VirtualBox window. <img src="https://lh5.googleusercontent.com/_OYJ8fj3PJrU/TU59Ez5r9FI/AAAAAAAAABY/cfYRDpouswg/s400/VirtualBox%20Hard%20Disk%20Completed.png" alt="Create New Virtual Disk" title="Create New Virtual Disk"/>
+  # Double click the newly created virtual machine. A _First Run Wizard_ window should pop up. Before continuing, you must either insert a DVD containing the Ubuntu image or mount the image using DAEMON Tools Lite. Install DAEMON Tools by double clicking its installer if you want to go this route. Then ensure that DAEMON Tools is running by selecting it from the Start menu. You should see a lightning bolt symbol in the bottom right corner of the task bar. Right click this icon, select Virtual Devices, then Device 0, then Mount Image. Navigate to the .iso Ubuntu image that you downloaded and select it. You should now have Ubuntu mounted and ready to go. <img src="https://lh3.googleusercontent.com/_OYJ8fj3PJrU/TU59E-0hchI/AAAAAAAAABU/H3uLuCOhfV8/s400/First%20Run%20Wizard.png" alt="First Run Wizard" title="First Run Wizard"/>
   # Continue with the VirtualBox installation. You should see Ubuntu loading. Eventually the Ubuntu installer should appear. Follow the directions for installing Ubuntu as if you were installing it directly on a new computer. <img src="http://www.ubuntu.com/sites/default/files/active/maverick/U2.1_start_fast_medium.jpg" alt="Ubuntu Loading Screen" title="Ubuntu Loading Screen"/>
   # After a possible reset of the virtual machine, you should eventually reach the login screen. At this point you have completed your installation of Ubuntu onto your virtual machine. However, for maximum benefit you should now install the VirtualBox "Guest Additions" to allow for automatic resizing of your virtual machine window and better mouse integration.
