--- a/wiki/DecisionTeamPseudocode.wiki
+++ b/wiki/DecisionTeamPseudocode.wiki
@@ -7,7 +7,7 @@ Text wraparound is annoying...
 
 while(true)  //or some more specific condition
 	
-	*evaluateCharge(charge, lastFillupTime)* 		//see if we have collected enough charge to go back to the flag
+	**evaluateCharge(charge, lastFillupTime)* 		//see if we have collected enough charge to go back to the flag
 							//note: after a certain time without filling up, as a failsafe, 
 							//go back to the flag no matter how much charge we have
 
