--- a/wiki/goToFunction.wiki
+++ b/wiki/goToFunction.wiki
@@ -3,9 +3,9 @@
 
 goTo(Point destination) {
     if(destination is imaginary) 
--------deadReckonTo(destination);
-        else 
-----honeInOn(destination);
+      deadReckonTo(destination);
+    else 
+      honeInOn(destination);
 }
 
 
