Edited wiki page goToFunction through web user interface.

--- a/wiki/goToFunction.wiki
+++ b/wiki/goToFunction.wiki
@@ -8,7 +8,13 @@ goTo(Point destination) {
       honeInOn(destination);
 }
 
+deadReckonTo(Point destination) {
 
+}
+
+honeInOn(Point destination) {
+
+}
 
 
 
