--- a/wiki/CheckoutLogForSmallPeices.wiki
+++ b/wiki/CheckoutLogForSmallPeices.wiki
@@ -7,6 +7,7 @@ somewhere in the 'misc' branch on Google Code; we'll talk about an organizationa
 
 
  * EXECUTION 
+* Checked out by RAVI*
   * _void setVel(double)_		//sets velocity. highly dependent on our motor controllers
   * _void setRotVel(double)_ 		//sets rotational velocity. highly dependent on our motor controllers
   * _class Bot_                         //holds our x,y position as a "Point", and the angle(degrees) in which the robot is pointing in a double. instantiated only
