--- a/wiki/CheckoutLogForSmallPeices.wiki
+++ b/wiki/CheckoutLogForSmallPeices.wiki
@@ -9,11 +9,11 @@ somewhere in the 'misc' branch on Google Code; we'll talk about an organizationa
  * EXECUTION *- Checked out by RAVI*
   * _void setVel(double)_		//sets velocity. highly dependent on our motor controllers
   * _void setRotVel(double)_ 		//sets rotational velocity. highly dependent on our motor controllers
-  * _class Bot_                         //holds our x,y position as a "Point", and the angle(degrees) in which the robot is pointing in a double. instantiated only
+  * _class Bot_                         //holds our x,y position as a "Point", and the angle(degrees) in which the robot is pointing in a double. instantiated only once *DONE*
 
 
 
- * VARIOUS INPUTS *- Checked out by RAVI*
+ * VARIOUS INPUTS 
   * _getVoltage()_               //OR: bool isFull(). monitors the charge on the capacitor
   * _bool isCharging()_          //to see if contact has been made and charge is flowing. this may just be a few calls to getVoltage() and a comparison to see if it's increasing
   * _bool isCharged()_           //to see if charge is at/near max capacity
